PLANPRO-4856: Tabellenübersicht hinzugefügt